# dev-cli

./: CHANGELOG.md  Cargo.toml  devbox.json
.github/workflows/: release-please.yml  release.yml
src/: cli.rs  error.rs  main.rs
src/commands/: cleanup.rs  completion.rs  config_cmd.rs  create.rs  init.rs  list.rs  mod.rs  project.rs  switch.rs
src/config/: global.rs  mod.rs  project.rs
src/editor/: mod.rs  vscode.rs  zed.rs
src/git/: branch.rs  mod.rs  status.rs  worktree.rs
src/package_manager/: mod.rs
src/shell/: completion.rs  devbox.rs  mod.rs
src/ui/: mod.rs  output.rs  prompts.rs
