[package]
name = "dev-cli"
version = "0.1.0"
edition = "2021"
authors = ["Josh"]
description = "Git worktree and project management CLI"
license = "MIT"

[[bin]]
name = "dev"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Interactive prompts
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# Colors and styling
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system and paths
dirs = "5.0"

# Date/time for timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
strip = true
